# GLA3-LOCUS

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  USER_GUIDE.md  WEBUI.html  docker-compose.yml  main.py  patch_webui.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
agents/: cleanup_agent.py  critic_agent.py  exploit_agent.py  recon_agent.py
api/: main.py
cli/: __init__.py  banner.py  main.py  progress_display.py
config/: db_init.sql  mission_example copy.yaml  mission_example.yaml  neo4j_init.cypher
core/: config_manager.py  llm_provider.py  log_config.py  orchestrator.py  planner.py  protocols.py  report_generator.py  safety.py  service_manager.py  state_api.py  state_pruner.py
executor/: executor.py  sandbox_external.py  sandbox_internal.py
memory/: rag_engine.py
reports/: report_20260513_042801.json  report_20260513_042801.md  report_20260513_123559.json  report_20260513_123559.md  report_20260513_140406.json  report_20260513_140406.md  report_20260513_171950.json  report_20260513_171950.md  report_20260514_030640.json  report_20260514_030640.md  report_20260515_122558.json  report_20260515_122558.md  report_20260523_122901.json  report_20260523_122901.md  report_20260523_162508.json  report_20260523_162508.md  report_20260524_054428.json  report_20260524_054428.md  report_20260525_054754.json  report_20260525_054754.md
scratch/: test_omlx.py
tests/: test_agents.py  test_critic.py  test_executor.py  test_issue_fixes.py  test_iteration_2.py  test_orchestrator.py  test_planner.py  test_protocols.py  (+3 more)
(+7 files in other folders)
